@@ -1,22 +1,31 @@
 package com.ssafy.docshund.domain.forums.service;
 
+import static com.ssafy.docshund.domain.forums.exception.ForumExceptionCode.MISMATCH_ARTICLE;
+import static com.ssafy.docshund.domain.forums.exception.ForumExceptionCode.NOT_FOUND_ARTICLE;
+import static com.ssafy.docshund.domain.forums.exception.ForumExceptionCode.NOT_FOUND_COMMENT;
+import static com.ssafy.docshund.domain.users.exception.auth.AuthExceptionCode.INVALID_MEMBER_ROLE;
+import static com.ssafy.docshund.domain.users.exception.auth.AuthExceptionCode.NOT_AUTHORIZATION_USER;
+import static com.ssafy.docshund.global.exception.GlobalErrorCode.INVALID_RESOURCE_OWNER;
+
 import java.util.ArrayList;
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.ssafy.docshund.domain.alerts.service.AlertsService;
 import com.ssafy.docshund.domain.forums.dto.CommentDto;
 import com.ssafy.docshund.domain.forums.dto.CommentInfoDto;
 import com.ssafy.docshund.domain.forums.entity.Article;
 import com.ssafy.docshund.domain.forums.entity.Comment;
+import com.ssafy.docshund.domain.forums.entity.Status;
+import com.ssafy.docshund.domain.forums.exception.ForumException;
 import com.ssafy.docshund.domain.forums.repository.ArticleRepository;
 import com.ssafy.docshund.domain.forums.repository.CommentRepository;
 import com.ssafy.docshund.domain.users.entity.User;
+import com.ssafy.docshund.domain.users.exception.auth.AuthException;
+import com.ssafy.docshund.domain.users.exception.user.UserException;
 import com.ssafy.docshund.global.util.user.UserUtil;
 
 import lombok.RequiredArgsConstructor;
@@ -28,6 +37,7 @@ public class CommentServiceImpl implements CommentService {
 	private final ArticleRepository articleRepository;
 	private final CommentRepository commentRepository;
 	private final UserUtil userUtil;
+	private final AlertsService alertsService;
 
 	@Override
 	@Transactional(readOnly = true)
@@ -37,8 +47,9 @@ public class CommentServiceImpl implements CommentService {
 
 		return comments.stream()
 			.map(CommentInfoDto::from)
-			.flatMap(Optional::stream)
-			.collect(Collectors.toList());
+			.filter(Optional::isPresent)
+			.map(Optional::get)
+			.toList();
 	}
 
 	@Override
@@ -49,8 +60,9 @@ public class CommentServiceImpl implements CommentService {
 
 		return comments.stream()
 			.map(CommentInfoDto::from)
-			.flatMap(Optional::stream)
-			.collect(Collectors.toList());
+			.filter(Optional::isPresent)
+			.map(Optional::get)
+			.toList();
 	}
 
 	@Override
@@ -58,14 +70,18 @@ public class CommentServiceImpl implements CommentService {
 	public CommentInfoDto createComment(Integer articleId, CommentDto commentDto) {
 
 		Article article = articleRepository.findById(articleId)
-			.orElseThrow(() -> new NoSuchElementException("NOT EXISTS ARTICLE"));
+			.orElseThrow(() -> new ForumException(NOT_FOUND_ARTICLE));
 
 		User user = userUtil.getUser();
-		if(user == null) {
-			throw new AccessDeniedException("NO PERMISSION TO UNLOGINED USER");
+		if (user == null) {
+			throw new AuthException(NOT_AUTHORIZATION_USER);
 		}
 
 		Comment savedComment = commentRepository.save(new Comment(null, user, article, commentDto.getContent()));
+
+		// 실시간 알림 보내기
+		alertsService.sendCommentAlert(article, user);
+
 		return new CommentInfoDto(savedComment.getArticle().getArticleId(), savedComment.getCommentId(),
 			savedComment.getContent(),
 			savedComment.getCreatedAt(), savedComment.getUpdatedAt(),
@@ -78,19 +94,24 @@ public class CommentServiceImpl implements CommentService {
 	@Transactional
 	public CommentInfoDto createReply(Integer articleId, Integer commentId, CommentDto commentDto) {
 
+		User user = userUtil.getUser();
+		if (user == null) {
+			throw new AuthException(NOT_AUTHORIZATION_USER);
+		}
+
 		Article article = articleRepository.findById(articleId)
-			.orElseThrow(() -> new NoSuchElementException("NOT EXISTS ARTICLE"));
+			.orElseThrow(() -> new ForumException(NOT_FOUND_ARTICLE));
 
 		Comment parentComment = commentRepository.findById(commentId)
-			.orElseThrow(() -> new NoSuchElementException("NOT EXISTS COMMENT"));
-
-		User user = userUtil.getUser();
-		if(user == null) {
-			throw new AccessDeniedException("NO PERMISSION TO UNLOGINED USER");
-		}
+			.orElseThrow(() -> new ForumException(NOT_FOUND_COMMENT));
 
 		Comment savedComment = commentRepository.save(
 			new Comment(parentComment, user, article, commentDto.getContent()));
+
+		// 실시간 알림 보내기
+		alertsService.sendCommentAlert(article, user);    // 게시글 작성자에게도 알림
+		alertsService.sendCommentReplyAlert(parentComment, user);    // 댓글 작성자에게도 알림
+
 		return new CommentInfoDto(savedComment.getArticle().getArticleId(), savedComment.getCommentId(),
 			savedComment.getContent(),
 			savedComment.getCreatedAt(), savedComment.getUpdatedAt(),
@@ -104,15 +125,15 @@ public class CommentServiceImpl implements CommentService {
 	public void updateComment(Integer articleId, Integer commentId, CommentDto commentDto) {
 
 		Comment comment = commentRepository.findById(commentId)
-			.orElseThrow(() -> new NoSuchElementException("NOT EXISTS COMMENT"));
+			.orElseThrow(() -> new ForumException(NOT_FOUND_COMMENT));
 
 		if (!comment.getArticle().getArticleId().equals(articleId)) {
-			throw new AccessDeniedException("ARTICLE ID NOT MATCHED");
+			throw new ForumException(MISMATCH_ARTICLE);
 		}
 
 		User user = userUtil.getUser();
 		if (user == null || !comment.getUser().getUserId().equals(user.getUserId())) {
-			throw new AccessDeniedException("NO PERMISSION FOR THIS COMMENT");
+			throw new UserException(INVALID_RESOURCE_OWNER);
 		}
 
 		comment.modifyContent(commentDto.getContent());
@@ -122,21 +143,32 @@ public class CommentServiceImpl implements CommentService {
 	@Transactional
 	public void deleteComment(Integer articleId, Integer commentId) {
 
-		Article article = articleRepository.findById(articleId)
-			.orElseThrow(() -> new NoSuchElementException("NOT EXISTS ARTICLE"));
-
 		Comment comment = commentRepository.findById(commentId)
-			.orElseThrow(() -> new NoSuchElementException("NOT EXISTS COMMENT"));
+			.orElseThrow(() -> new ForumException(NOT_FOUND_COMMENT));
 
 		if (!comment.getArticle().getArticleId().equals(articleId)) {
-			throw new AccessDeniedException("ARTICLE ID NOT MATCHED");
+			throw new ForumException(MISMATCH_ARTICLE);
 		}
 
 		User user = userUtil.getUser();
 		if (user == null || !comment.getUser().getUserId().equals(user.getUserId())) {
-			throw new AccessDeniedException("NO PERMISSION FOR THIS COMMENT");
+			throw new UserException(INVALID_RESOURCE_OWNER);
 		}
 
 		comment.modifyToDelete();
+	}
+
+	@Override
+	@Transactional
+	public void modifyCommentStatus(Integer articleId, Status status) {
+		User user = userUtil.getUser();
+		if (!userUtil.isAdmin(user)) {
+			throw new AuthException(INVALID_MEMBER_ROLE);
+		}
+
+		Comment comment = commentRepository.findById(articleId)
+			.orElseThrow(() -> new ForumException(NOT_FOUND_COMMENT));
+
+		comment.modifyStatus(status);
 	}
 }
